# Icosahedron

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  NOTICE.md  README.md  UI_MANIFEST.md  electron.vite.config.ts  index.html  package-lock.json  package.json  standalone-snake.html  tsconfig.node.json
.github/workflows/: build.yml
crates/subsonic/: Cargo.toml
crates/subsonic/examples/: ping.rs
crates/subsonic/src/: client.rs  error.rs  lib.rs  models.rs
electron/main/: audioEngine.ts  bpmCache.ts  castChromecast.ts  castDidl.ts  castDiscovery.ts  castDlna.ts  castManager.ts  castProxy.ts  castv2-client.d.ts  coverProtocol.ts  credentials.ts  index.ts  lastfm.ts  lastfmSession.ts  lyrics.ts  models.ts  screenCapture.ts  subsonic.ts  traySettings.ts  updater.ts  windowState.ts
electron/preload/: index.ts
native/audio-engine/: Cargo.toml  build.rs  package.json
native/audio-engine/src/: bpm.rs  bpm_analyze.rs  commands.rs  decode.rs  engine.rs  eq.rs  events.rs  helpers.rs  lib.rs  play_input.rs  progress_task.rs  sources.rs  state.rs  transport.rs
native/audio-engine/src/stream/: mod.rs  ranged_http.rs
scripts/: deb-after-install.tpl  gen-appstream.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AlbumLink.tsx  ArtistInfoPanel.tsx  ArtistTokens.tsx  BpmMenu.tsx  BreakoutWidget.tsx  CastPicker.tsx  ColumnFilterPopup.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CoverArt.tsx  CoverZoomOverlay.tsx  EqualizerPopup.tsx  GlobalHotkeys.tsx  GlobalTooltip.tsx  Icon.tsx  (+26 more)
(+21 files in other folders)
