[package]
name = "subsonic"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rand = "0.9"
urlencoding = "2"
